--- a/index.html
+++ b/index.html
@@ -4,20 +4,63 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <title>Flexbox</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="flex-item item-1">Item 1</div>
-      <div class="flex-item item-2">Item 2</div>
-      <div class="flex-item item-3">Item 3</div>
-      <div class="flex-item item-4">Item 4</div>
-      <div class="flex-item item-5">Item 5</div>
-      <div class="flex-item item-6">Item 6</div>
-      <div class="flex-item item-7">Item 7</div>
-      <div class="flex-item item-8">Item 8</div>
-      <div class="flex-item item-9">Item 9</div>
-    </div>
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">Flexbox</div>
+        <ul class="nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <header class="header">
+      <div class="container">
+        <div>
+          <h1>Hello, I am Flexy!</h1>
+          <p>
+            Flexbox is a very important and useful tool in CSS. Here is a simple
+            demonstration of me flexing my flexbox skills.
+          </p>
+        </div>
+        <img src="./Assets/grid.svg" alt="Grid Image" />
+      </div>
+    </header>
+    <section class="boxes">
+      <div class="container">
+        <div class="box">
+          <h2><i class="fas fa-arrows-alt-v"></i> Alignment & Space</h2>
+          <p>
+            A more efficient way to layout, align and distribute space among
+            items in a container.
+          </p>
+        </div>
+        <div class="box">
+          <h2><i class="fas fa-arrows-alt"></i> Tricky Positioning</h2>
+          <p>
+            Flexbox usually solves tricky problems including how to position or
+            dynamically resize elements on a page.
+          </p>
+        </div>
+        <div class="box">
+          <h2><i class="fas fa-mobile"></i> Responsive Design</h2>
+          <p>
+            Flexbox makes building a website layout (and making it responsive!)
+            much, much easier.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
